# ML-Project

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  Structure.md  main.py  main_interactive.py  makefile  pyproject.toml  verify_augmentator_node.py  verify_automl.py  verify_dataset_loader.py  verify_pipeline.py  verify_swin_model.py  verify_vit_model.py
.github/workflows/: main.yml
auto_ml/: automl.py  implementations.py  interfaces.py
auto_ml/models/swin/: model.py
auto_ml/models/vit/: model.py
docs/soa/: Classification.md  DataAugmentationSoA.md  SegmentationSoA.md
notebooks/: ductile_brittle_data_exploration.ipynb
src/approaches/cnn_v1/: schemas.py  train.py  validate.py
src/approaches/cnn_v1/configs/: base.yaml  fast_for_testing.yaml  loader.py  schemas.py
src/approaches/cnn_v1/data/: datasets.py
src/core/: example.py
src/domain/: classifier.py  data_augmenter.py  dataset.py  image.py  segmenter.py
src/models/: __init__.py
src/models/binary_classification/: __init__.py  cnn_v1.py
src/utils/: config.py
tests/: test_augmentator_node.py  test_automl.py  test_dataset_loader.py  test_example.py  test_pipeline.py  test_swin_model.py  test_vit_model.py
